# poetry_system

./: INTERFACE.md  README.md  ROADMAP.md  __init__.py  analyzer.py  generator.py  main.py  pyproject.toml  requirements.txt  setup.py
_archive/: analyzer_old.py
core/: analyzer.py  generator.py
old/simple-version/: poetry-system.py
tests/: __init__.py  test_analyzer.py  test_generator.py
vocabulary/: __init__.py  abstract_words.py  emotion_words.py  nature_words.py  sensory_words.py
