[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "poetry-system"
version = "1.0.0"
description = "A system for analyzing and generating poetry"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "George Dickinson"},
]
dependencies = [
    "spacy>=3.5.0",
    "textblob>=0.17.1",
    "pronouncing>=0.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
